--- a/lexiflux/templates/profile.html
+++ b/lexiflux/templates/profile.html
@@ -132,7 +132,9 @@
                                 <label class="form-label">AI Model</label>
                                 <select v-model="form.parameters.model" class="form-select">
                                     <option value="">Select model</option>
-                                    <option v-for="model in aiModels" :value="model">{{ model }}</option>
+                                    <option v-for="model in aiModels" :key="model.key" :value="model.key">
+                                        [[ model.title ]]
+                                    </option>
                                 </select>
                             </div>
                         </div>
@@ -140,9 +142,7 @@
                             <div class="mb-3">
                                 <label class="form-label">Dictionary</label>
                                 <select v-model="form.parameters.dictionary" class="form-select">
-                                    <option value="merriam-webster">Merriam-Webster</option>
-                                    <option value="oxford">Oxford</option>
-                                    <option value="cambridge">Cambridge</option>
+                                    <option value="GoogleTranslator">GoogleTranslator</option>
                                 </select>
                             </div>
                         </div>
@@ -212,21 +212,18 @@ new Vue({
 
         try {
             data.articles = JSON.parse('{{ articles|escapejs }}' || '[]');
-            console.log('Parsed articles:', data.articles);
         } catch (e) {
             console.error('Error parsing articles:', e);
         }
 
         try {
             data.allLanguages = JSON.parse('{{ all_languages|escapejs }}' || '[]');
-            console.log('Parsed languages:', data.allLanguages);
         } catch (e) {
             console.error('Error parsing languages:', e);
         }
 
         try {
             data.inlineTranslation = JSON.parse('{{ inline_translation|escapejs }}' || '{}');
-            console.log('Parsed inline translation:', data.inlineTranslation);
         } catch (e) {
             console.error('Error parsing inline translation:', e);
         }
@@ -310,21 +307,33 @@ new Vue({
                 this.form.title = this.generateTitle(this.form.type);
             }
             if (this.form.type === 'Site') {
-                this.form.parameters = {
+                this.form.parameters = this.form.parameters || {
                     url: '',
                     window: false
                 };
             } else if (['Translate', 'Sentence', 'Explain', 'Examples', 'Lexical'].includes(this.form.type)) {
                 fetch('{% url "get_models" %}')
-                    .then(response => response.json())
+                    .then(response => {
+                        if (!response.ok) {
+                            throw new Error(`HTTP error! status: ${response.status}`);
+                        }
+                        return response.json();
+                    })
                     .then(data => {
                         this.aiModels = data.models;
+                        console.log('AI Models:', this.aiModels);
+                        // Set default model if not already set
+                        if (!this.form.parameters || !this.form.parameters.model) {
+                            this.form.parameters = this.form.parameters || {};
+                            this.form.parameters.model = this.aiModels.length > 0 ? this.aiModels[0].key : '';
+                        }
+                    })
+                    .catch(error => {
+                        console.error('Error fetching models:', error);
+                        this.aiModels = [];
                     });
-                this.form.parameters = {
-                    model: ''
-                };
             } else if (this.form.type === 'Dictionary') {
-                this.form.parameters = {
+                this.form.parameters = this.form.parameters || {
                     dictionary: ''
                 };
             }
@@ -449,7 +458,6 @@ new Vue({
                 })
                 .then(data => {
                     this.articles = data.articles;
-                    console.log('Loaded articles:', this.articles);
                 })
                 .catch(error => {
                     console.error('Error loading articles:', error);
