--- a/lexiflux/templates/language-tool-preferences.html
+++ b/lexiflux/templates/language-tool-preferences.html
@@ -119,7 +119,7 @@
                                 <label class="form-label">Predefined URLs</label>
                                 <select v-model="form.parameters.url" class="form-select">
                                     <option value="">Select a predefined URL</option>
-                                    <option v-for="url in predefinedUrls" :value="url">{{ url }}</option>
+                                    <option v-for="url in predefinedUrls" :value="url">[[ url ]]</option>
                                 </select>
                             </div>
                             <div class="mb-3 form-check">
