--- a/lexiflux/templates/reader.html
+++ b/lexiflux/templates/reader.html
@@ -17,7 +17,10 @@
                             </li>
                         {% endfor %}
                     </ul>
-                    <button id="lexical-panel-button" class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#lexical-panel" aria-expanded="false" aria-controls="lexical-panel">
+                    <button id="lexical-panel-button" class="btn btn-primary" type="button"
+                            data-bs-toggle="collapse" data-bs-target="#lexical-panel"
+                            aria-expanded="false" aria-controls="lexical-panel"
+                            title="Lexical Sidebar">
                         <i id="lexical-panel-icon" class="bi bi-chevron-double-left"></i>
                     </button>
                 </div>
