form.title placeholder

--- a/lexiflux/templates/base.html
+++ b/lexiflux/templates/base.html
@@ -102,6 +102,13 @@
                 background-repeat: no-repeat;
                 background-position: right 10px center;
             }
+            input::placeholder {
+                color: #6c757d;
+                opacity: 1;
+            }
+            input:focus::placeholder {
+                color: transparent;
+            }
 
         </style>
     </head>
