inline translation now can use any Lexical Article use JSONFiled and choices in field simplified /translator API

--- a/lexiflux/templates/language-tool-preferences.html
+++ b/lexiflux/templates/language-tool-preferences.html
@@ -48,7 +48,7 @@
                         </div>
                         <div class="mb-3">
                             <div class="d-flex justify-content-between align-items-start">
-                                <strong>In-text translation:</strong>
+                                <strong>Inline Translation:</strong>
                                 <button type="button" class="btn btn-primary btn-sm" @click="editInlineTranslation">
                                     Edit
                                 </button>
